# simple-mcp-client

./: .env.example  .gitignore  README.md  config.py  interactive_cli.py  llm_providers.py  mcp_client.py  mcp_config_example.json  pyproject.toml  query_processing.py  simple_mcp_client.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
example_configs/: custom_server.json  filesystem_server.json  llm_anthropic.json  llm_openai.json  llm_openrouter.json  mcp_filesystem.json  multiple_servers.json
examples/: ai_agent_integration.py  basic_usage.py  web_app_integration.py
tests/: __init__.py  conftest.py  test_config.py  test_llm_providers.py  test_mcp_client.py  test_query_processing.py  test_simple_mcp_client.py
